--- a/Jupyter_Notebook(1).ipynb
+++ b/Jupyter_Notebook(1).ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73d156c0",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Final Assignment On Jupyter Notebook\n",
@@ -11,9 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "07641de6",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 1: Create a Jupyter Notebook (Create a new Jupyter notebook called DataScienceEcosystem.ipynb)"
@@ -21,9 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1f63ac52",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 2: Create markdown cell with title (Data Science Tools and Ecosystem using H1 heading)of the notebook"
@@ -31,7 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a417764f",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -39,9 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8f922774",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 3 - Create a markdown cell for an introduction (Write an introductory sentence about the notebook)"
@@ -49,46 +66,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bebdd9d",
    "metadata": {},
    "source": [
-    "# Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7be8f320",
-   "metadata": {},
-   "source": [
-    "Jupyter notebook is an open source web application used to create and share documents that contains live code, equations, visualizations and text.\n",
+    "# Introduction\n",
+    "\n",
+    "upyter notebook is an open source web application used to create and share documents that contains live code, equations, visualizations and text.\n",
     "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0230376f",
-   "metadata": {},
-   "source": [
-    "**Objectives**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22a72bb7",
-   "metadata": {},
-   "source": [
-    "* Practice jupyter note book \n",
-    "* List both data scince tools and commonly used libraries\n",
-    "* Create a table using pandas library in Python \n",
-    "* Evaluate arithmetic expression using Python and much more\n",
-    "* Describe Data scince ecosystems"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "42c3e9e8",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 4 - Create a markdown cell to list data science languages"
@@ -96,7 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c71a22",
    "metadata": {},
    "source": [
     "Programming language is the most essential skills for data scientists, data analysts and engineers. It helps to organize and visualize data on various scales and which leads to extract insights from data. Some of the popular languages that Data Scientists use are:\n",
@@ -105,14 +95,15 @@
     "2. R\n",
     "3. SQL\n",
     "4. JavaScript and \n",
-    "5. C/C++   \n"
+    "5. C/C++ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "466d616d",
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 5 - Create a markdown cell to list data science libraries"
@@ -120,10 +111,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f4d29a",
    "metadata": {},
    "source": [
-    "###### *Some of the commonly used libraries used by Data Scientists include*:\n",
+    "#### Some of the commonly used libraries used by Data Scientists include:\n",
     "1. Scintific computing libraries include pandas and numpy\n",
     "2. Visualization libraries includs Matplotlib and seaborn\n",
     "3. Machine learning and deep learining libraries includes Scikit-learn, PyTorch, Keras, TensorFlow, and Apache Spark"
@@ -131,9 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fffc7c7c",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 6 - Create a markdown cell with a table (single column)of Data Science tools"
@@ -141,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073a624c",
    "metadata": {},
    "source": [
     "This table shows some of data science tools which helps to carryout tasks effectively. \n",
@@ -157,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35a2a48d",
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Exercise 7 - Create a markdown cell introducing arithmetic expression examples\n"
+    "# Exercise 7 - Create a markdown cell introducing arithmetic expression examples"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54c095e6",
    "metadata": {},
    "source": [
     "## Arithmetic expression"
@@ -175,29 +165,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8675532",
    "metadata": {},
    "source": [
-    "### Arithmetic expression is the study of numbers, especially the properties of traditional operations, such as:\n",
+    "Arithmetic expression is the study of numbers, especially the properties of traditional operations, such as:\n",
     "\n",
     "* Addition\n",
     "* Subtraction\n",
     "* Multiplication\n",
     "* Division\n",
-    "### Few examples of evaluating arithmetic expressions in Python;"
+    "\n",
+    "Few examples of evaluating arithmetic expressions in Python;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "d7547f85",
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n"
+      "14\n",
+      "6\n",
+      "40\n",
+      "0.4\n"
      ]
     }
    ],
@@ -206,64 +200,13 @@
     "a = 4\n",
     "b = 10\n",
     "c = a + b\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "91ddede1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(c)\n",
     "# Subtraction\n",
     "d = b - a\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "f9f27459",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(d)\n",
     "# Multiplication\n",
     "e = a * b\n",
-    "print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "d24227a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(e)\n",
     "# Division\n",
     "f = a/b\n",
     "print(f)"
@@ -271,9 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e858322a",
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 8 - Create a code cell to multiply and add numbers"
@@ -281,9 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6dd4e2ef",
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -291,7 +236,7 @@
        "17"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,9 +247,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "595ab9b4",
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 9 - Create a code cell to convert minutes to hours"
@@ -312,9 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "63cb6239",
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -325,7 +272,6 @@
     }
    ],
    "source": [
-    "import numpy as np    \n",
     "n = 200           # Code for expression that converts 200 minutes into hours\n",
     "hr = n*(1/60)\n",
     "print(hr)"
@@ -333,20 +279,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4ceb8a6d",
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Exercise 10 - Insert a markdown cell to list Objectives (in bold and unordered list\n",
-    "(bullets)) (Below the introduction cell created in Exercise 3)"
+    "# Exercise 10 - Insert a markdown cell to list Objectives (in bold and unordered list (bullets)) (Below the introduction cell created in Exercise 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "* Practice jupyter note book \n",
+    "* List both data scince tools and commonly used libraries\n",
+    "* Create a table using pandas library in Python \n",
+    "* Evaluate arithmetic expression using Python and much more\n",
+    "* Describe Data scince ecosystems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6a6c04b4",
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 11 - Create a markdown cell to indicate the Author's (H2 style heading) name"
@@ -354,47 +313,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0d87c2",
    "metadata": {},
    "source": [
     "## Author\n",
-    "Fetene, Zewdu Alamineh"
+    " Fetene, Zewdu Alamineh "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "57b351e0",
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Exercise 12 - Share your notebook through GitHub\n"
+    "# Exercise 12 - Share your notebook through GitHub"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f13722a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "[upyter Notebooks](https://Jupyter.Notebooks/) "
+    "[Skills Network](https://Skills.Network/) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "cfaa0847",
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercise 13 -Take a screenshot of the first page of the notebook and save it as 1-notebook.png "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -406,9 +374,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
